--- a/mountain.css
+++ b/mountain.css
@@ -28,13 +28,8 @@ a:hover {
   width: 100vw;
   position: fixed;
   top: 0px;
-  display: flex;
-  justify-content: space-between;
   height: 70px;
   border-bottom: 2px solid black;
-  padding: 0px 30px;
-  background-color: rgb(117,113,128);
-  color: rgb(6,32,73);
 }
 
 .style-box {
@@ -299,49 +294,6 @@ a:hover {
 .projects-link img {
     margin-top: 36px;
     height: 300px;
-}
-
-
-/* more css */
-
-#more-page-contents {
-    background-color: rgba(117, 113, 128, 0.838);;
-    color: rgb(6,32,73);
-    padding-top: 2px;
-    padding-bottom: 60px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
-
-#more-about-me-header {
-    border-bottom: 2px solid white;
-}
-
-#hobby-header {
-    text-decoration: underline;
-    font-size: 40px;
-    margin-left: 2vw;
-}
-
-.hobby {
-    display: flex;   
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: white;
-    width: 90vw;
-    height: auto;
-    border-radius: 40px;
-    margin: 2vh 1vw;
-}
-
-.hobby-descr {
-    padding: 0vh 3vw;
-    font-size: 20px;
-}
-
-.hobby img {
-    height: 25vh;
-    margin: 0vh 3vw;
 }
 
 .extracurriculars {
